Changed id of <p> that contains wikipedia link to  'wikipedia_link'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -529,9 +529,10 @@ select {
    letter-spacing: .09rem;
 }
 
-#exoplanets_link {
+#wikipedia_link {
     text-align: center;
     margin-top: 24%;
+    margin-bottom: 0;
 }
 
 #exoplanets_anchor {
