--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -113,7 +113,7 @@
 						</div>
 					</div>
 				</div>
-				<p id="exoplanets_link">
+				<p id="wikipedia_link">
 					<a id="exoplanets_anchor" href="https://en.wikipedia.org/wiki/Lists_of_exoplanets" target="_blank"
 						aria-label="list of explanets from wikipedia">wikipedia.org</a>
 				</p>
