Added border 3.5px to exoplanets_holder class

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -184,9 +184,10 @@ body {
 }
 
 .exoplanets_holder {
-    border: 1px solid #1d1e1f;
+    border: 8px solid #408ec6;
     margin: 2rem 0;
     background-color: #408ec6;
+    box-sizing: border-box;
 }
 
 #exoplanet_name {
