--- a/static/css/style.css
+++ b/static/css/style.css
@@ -143,8 +143,8 @@ body {
     margin-top: 2rem;
 }
 
-#home_action_button {
-    margin-top: 1.7rem;
+.home_action_button {
+    margin: 1.7rem 1rem;
     width: 10rem;
     height: 2.5rem;
     font-size: 1.3rem;
