Changed id of 'home_action_buttons' to class witht the same name

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,8 +8,8 @@
 		<div id="title_container" class="col-12">
 			<h1 id="title">other worlds</h1>
 			<h2 id="sub_title">brief guide to exoplanets</h2>
-			<a href="{{ url_for('about') }}"><button id="home_action_button" class="buttons">about</button></a>
-			<a href="{{ url_for('exoplanets_display') }}"><button id="home_action_button" class="buttons">exoplanets</button></a>
+			<a href="{{ url_for('about') }}"><button class="home_action_button buttons">about</button></a>
+			<a href="{{ url_for('exoplanets_display') }}"><button class="home_action_button buttons">exoplanets</button></a>
 		</div>
 	</div>
 </div>
