--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kufam&family=Roboto+Slab:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kufam&family=Abril+Fatface&family=Roboto+Slab:wght@400;700;800&display=swap');
 
 body {
     margin: 0;
@@ -92,6 +92,12 @@ body {
     margin-top: 2rem;
 }
 
+.top-titles {
+    letter-spacing: .5rem;
+    text-transform: uppercase;
+    font-family: 'Abril Fatface', cursive;
+}
+
 /* home page starts here */
 
 #home_container {
@@ -126,7 +132,7 @@ body {
 
 #title_container {
     text-align: center;
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Abril Fatface', cursive;
     font-weight: 400;
     color: #e5e5dc;
 }
@@ -176,12 +182,6 @@ body {
 #exoplanet_page_title_container {
     text-align: center;
     margin-top: 1.5rem;
-}
-
-.title_exoplanet_page {
-    letter-spacing: .5rem;
-    text-transform: uppercase;
-    font-family: 'Roboto Slab', sans-serif;
 }
 
 .exoplanets_holder {
