Gave class of top-titles to all titles

--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <div style="margin-top:5rem" class="container">
 	<div class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
-			<h1 class="title_exoplanet_page">about</h1>
+			<h1 class="top-titles">about</h1>
             <div>
             <p id="quote">"The Earth is a very small stage in a vast cosmic arena."</p>
             <p id="quote_author">Carl Sagan</p>
