--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -3,7 +3,7 @@
 <div id="detailed_exoplanet_container" class="container">
 	<div class="row">
 		<div id="detailed_exoplanet_title" class="col-12">
-			<h1>{{ detailed_exoplanet.planet_name }}</h1>
+			<h1 class="top-titles">{{ detailed_exoplanet.planet_name }}</h1>
 		</div>
 	</div>
 	<div id="exoplanet_display" class="row">
