--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -3,7 +3,7 @@
 <div style="margin-top:5rem" class="container">
 	<div class="row">
 		<div style="text-align:center" class="col-12">
-			<h1 class="title_exoplanet_page">favourites rocky worlds</h1>
+			<h1 class="top-titles">favourites rocky worlds</h1>
 		</div>
 	</div>
 	<div class="row main-action">
