--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -3,7 +3,7 @@
 <div style="margin-top:4.3rem;" class="container-fluid">
 	<div class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
-			<h1 class="title_exoplanet_page">add exoplanet</h1>
+			<h1 class="top-titles">add exoplanet</h1>
 		</div>
 	</div>
 	<div class="row main-action">
