--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -3,7 +3,7 @@
 <div style="margin-top:5rem" class="container">
 	<div class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
-			<h1 class="title_exoplanet_page">exoplanets</h1>
+			<h1 class="top-titles title_exoplanet_page">exoplanets</h1>
 		</div>
 	</div>
 	<div class="row main-action">
