--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kufam&family=Abril+Fatface&family=Roboto+Slab:wght@400;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kufam&family=Abril+Fatface&family=Piazzolla&family=Roboto+Slab:wght@400;700;800&display=swap');
 
 body {
     margin: 0;
@@ -29,7 +29,7 @@ body {
 }
 
 #navbar_title {
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Abril Fatface', cursive;
     padding-top: 0px;
     padding-bottom: 6px;
     font-weight: 700;
@@ -55,10 +55,12 @@ body {
 }
 
 .buttons {
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Piazzolla', serif;
     background-color: #7a2048;
     text-transform: capitalize;
     color: #e5e5dc;
+    letter-spacing: .05rem;
+    font-weight: 400;
 }
 
 .buttons:hover {
