Removed the word 'favourites' from action buttons

--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('favourite_gas_giants') }}">
-				<button class="top_buttons favourites_main_buttons buttons">favourite gas giants</button>
+				<button class="top_buttons favourites_main_buttons buttons">gas giants</button>
 			</a>
 		</div>
 	</div>
