--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -9,7 +9,7 @@
 	<div class="row main-action">
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
-				<button class="buttons top_buttons">favourites rocky worlds</button>
+				<button class="buttons top_buttons">rocky worlds</button>
 			</a>
 		</div>
 		<div class="col-3 main_action_buttons">
@@ -19,7 +19,7 @@
 		</div>
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('favourite_gas_giants') }}">
-				<button class="buttons top_buttons">favourites gas giants</button>
+				<button class="buttons top_buttons">gas giants</button>
 			</a>
 		</div>
 		<div class="col-3 dropdown">
