--- a/templates/favourite_gas_giants.html
+++ b/templates/favourite_gas_giants.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class="col-6 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
-				<button class="top_buttons favourites_main_buttons buttons">favourites rocky worlds</button>
+				<button class="top_buttons favourites_main_buttons buttons">rocky worlds</button>
 			</a>
 		</div>
 	</div>
