--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@ body {
     font-size: 16px;
     background-color: #1e2761;
     color: #e5e5dc;
-    font-family: 'Kufam', cursive;
+    font-family: 'Piazzolla', serif;
 }
 
 #nav {
@@ -55,7 +55,7 @@ body {
 }
 
 .buttons {
-    font-family: 'Piazzolla', serif;
+    font-family: 'Roboto Slab', sans-serif;
     background-color: #7a2048;
     text-transform: capitalize;
     color: #e5e5dc;
@@ -595,7 +595,7 @@ select {
 
 #wrong_data {
     width: 50%;
-    height: 20rem;
+    min-height: 20rem;
     background-color: #7a2048;
     border: 3px solid #408ec6;
     padding: 1.5rem;
@@ -614,7 +614,12 @@ select {
 #wrong_data_info {
     background-color: #e5e5dc;
     color: #7a2048;
-    padding-top: 1.4%; 
+    padding-top: 1.4%;
+}
+
+#back_to_form {
+    text-align: center;
+    margin-top: 2rem;
 }
 
 
