--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<div style="margin-top:5rem" class="container">
-	<div class="row">
+<div class="main_container container">
+	<div style="margin-top:5rem" class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
 			<h1 class="top-titles">about</h1>
             <div>
