Removed social icons display for mobile screens

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,7 @@
 			</ul>
 		</div>
 	</nav>
-    <div id="icons_container" class="col-12">
+    <div id="icons_container" class="col-12 d-none d-sm-block">
 				<i class="fab fa-facebook-square"></i><br>
 				<i class="fab fa-instagram"></i><br>
 				<i class="fab fa-youtube-square"></i><br>
