--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -29,7 +29,7 @@
 	</div>
 	<div class="row">
 		{% for exoplanet in exoplanets %}
-		<div class="col-4">
+		<div class="col-12 col-md-6 col-lg-4">
 			<div class="exoplanets_holder">
 				<div class="image_holder">
 					<img class="zoom_image" src="{{ exoplanet.exoplanet_image }}" width="100%" height="100%" alt="">
