--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -8,7 +8,7 @@
 	</div>
 	<div class="row main-action">
 		<div class="col-3 main_action_buttons">
-			<a href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky worlds</button></a>
+			<a href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky <span class="col-12 d-none d-sm-block">worlds</span></button></a>
 		</div>
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
@@ -18,7 +18,7 @@
 		</div>
 		<div class="col-3 dropdown">
 			<button style="padding-top:.1rem" class="dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    sort by size
+    sort <span class="col-12 d-none d-sm-block">by size</span>
   </button>
 			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 				<a class="dropdown-item" href="{{ url_for('small_to_large') }}">Small To Large</a>
