Removed class of 'rocky'

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -11,7 +11,7 @@
 			<a href="{{ url_for('rocky_planets') }}"><button class="top_buttons buttons">rocky <span class="col-12 d-none d-sm-block">worlds</span></button></a>
 		</div>
 		<div class="col-3 main_action_buttons">
-			<a href="{{ url_for('favourite_list') }}"><button class="top_buttons buttons">favourites</button></a>
+			<a href="{{ url_for('favourite_list') }}"><button class="favourites top_buttons buttons">favourites</button></a>
 		</div>
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('gas_giants_planets') }}"><button class="top_buttons buttons">gas giants</button></a>
