--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -19,7 +19,7 @@
 	</div>
 	<div class="row">
 		{% for rocky_planet in rocky_planets %}
-		<div class="col-4">
+		<div class="col-12 col-md-6 col-lg-4">
 			<div class="exoplanets_holder">
 				<div class="image_holder">
 					<img class="zoom_image" src="{{ rocky_planet.exoplanet_image }}" width="100%" height="100%" alt="">
