Added 'empty_message' in case the list in empty

--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -17,6 +17,13 @@
 			</a>
 		</div>
 	</div>
+    <div id="empty_message" class="row">
+		<div class="col-12">
+			<div id="add_favourites_message">
+				<p>this list is currently empty.</p>
+			</div>
+		</div>
+	</div>
 	<div class="row">
 		{% for rocky_planet in rocky_planets %}
 		<div class="col-12 col-md-6 col-lg-4">
