--- a/templates/favourite_gas_giants.html
+++ b/templates/favourite_gas_giants.html
@@ -38,7 +38,7 @@
 				<p class="exoplanet_properties"><strong>Star System:</strong> {{gas_giant.star_system}}</p>
 				<hr class="separator">
 				<div class="centered_buttons">
-					<a href="{{ url_for('delete_favourite', exoplanet_id=gas_giant._id)}}"
+					<a href="{{ url_for('delete_gas_giant', exoplanet_id=gas_giant._id)}}"
 						id="margin-left"><button class="exoplanets_display_buttons buttons">delete</button></a>
 					<a href="{{ url_for('calculate_weight', exoplanet_id=gas_giant._id) }}"
 						id="float_right"><button class="exoplanets_display_buttons buttons">calculate weight</button></a>
