--- a/templates/favourite_rocky_planets.html
+++ b/templates/favourite_rocky_planets.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div style="margin-top:5rem" class="container">
 	<div class="row">
-		<div style="text-align:center" class="col-12">
+		<div id="exoplanet_page_title_container" style="text-align:center" class="col-12">
 			<h1 class="top-titles">favourites rocky worlds</h1>
 		</div>
 	</div>
