Gave id of 'add_exoplanet_message_container' to add exoplanet message at the bottom of the page

--- a/templates/exoplanets.html
+++ b/templates/exoplanets.html
@@ -50,8 +50,8 @@
 			</div>
 			{% endfor %}
 		</div>
-		<div style="margin:2rem 0 2.5rem 0" class="row">
-			<div class="col-12">
+		<div id="add_exoplanet_message_container" class="row">
+			<div id="col_add_exoplanet_message" class="col-12">
 				<div id="add_exoplanet_message">
 					<p>Can't find your favourite exoplanet in the main list? Add any exoplanet to your Favourites List
 						by simply entering its details <a href="{{ url_for('add_exoplanet') }}">here</a>.</p>
