Inline styling for the <hr> top separator

--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -17,7 +17,7 @@
 			<div class="col-12 properties_container">
 				<div id="detailed_properties" class="detailed">
 					<p id="name_paragraph">Name: {{ detailed_exoplanet.planet_name }}</p>
-					<hr class="detailed_separator">
+                    <hr style="margin-top:0" class="detailed_separator">
 					<p>Discovery date: {{ detailed_exoplanet.discovery_date }}</p>
 					<hr class="detailed_separator">
 					<p>Distance From Earth: {{ detailed_exoplanet.distance_from_earth }} light years</p>
