Set up col-6 for form and guide for large screens onwards

--- a/templates/add_exoplanet.html
+++ b/templates/add_exoplanet.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div id="form_row" class="row">
-		<div id="insert_form" class="col-12 col-sm-6">
+		<div id="insert_form" class="col-12 col-lg-6">
 			<div id="form_container">
 				<form action="{{ url_for('insert_exoplanet') }}" method="POST">
 					<div class="form-group">
@@ -50,7 +50,7 @@
 				</form>
 			</div>
 		</div>
-		<div id="guide-container" class="col-12 col-sm-6">
+		<div id="guide-container" class="col-12 col-lg-6">
 			<div id="guide">
 				<h5>Guide To Insert An Exoplanet</h5>
 				<div class="accordion" id="accordionExample">
