--- a/templates/exoplanet_weight.html
+++ b/templates/exoplanet_weight.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<div style="margin-top:21rem;margin-bottom:12rem;" class="container">
-	<div class="row">
+<div class="container">
+	<div id="your_weight_container" class="row">
 		<div class="col-12">
         <div id="weight_message">
 			<p>On the surface of {{ exoplanet_name }} you weight<br>
