--- a/templates/wrong_data.html
+++ b/templates/wrong_data.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="main_container container">
-	<div style="margin-top: 12rem" class="row">
+	<div id="wrong_data_container" class="row">
 		<div id="exoplanet_page_title_container" class="col-12">
 			<div id="wrong_data">
 				<h2>Oops! Wrong data inserted.</h2>
