Added if and elif statement to render action buttons depending on the function that the page is rendered with from app.py

--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -6,7 +6,32 @@
 			<h1 class="top-titles">favourites list</h1>
 		</div>
 	</div>
-	<div class="row main-action">
+    {% if rocky %}
+        <div class="row main-action">
+		<div class="col-6 main_action_buttons">
+			<a
+				href="{{ url_for('favourite_list') }}"><button class="top_buttons favourites_main_buttons buttons">favourites</button></a>
+		</div>
+		<div class="col-6 main_action_buttons">
+			<a href="{{ url_for('favourite_gas_giants') }}">
+				<button class="top_buttons favourites_main_buttons buttons">gas giants</button>
+			</a>
+		</div>
+	    </div>
+    {% elif gas %}
+        <div class="row main-action">
+		<div class="col-6 main_action_buttons">
+			<a
+				href="{{ url_for('favourite_list') }}"><button class="top_buttons favourites_main_buttons buttons">favourites</button></a>
+		</div>
+		<div class="col-6 main_action_buttons">
+			<a href="{{ url_for('favourite_rocky_planets') }}">
+				<button class="top_buttons favourites_main_buttons buttons">rocky</button>
+			</a>
+		</div>
+	    </div>
+    {% else %}
+       <div class="row main-action">
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
 				<button class="buttons top_buttons">rocky</button>
@@ -24,21 +49,22 @@
 		</div>
 		<div class="col-3 dropdown">
 			<button style="padding-top:.1rem" class="dropdown-toggle top_buttons buttons" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    sort by size
-  </button>
+       sort by size
+      </button>
 			<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 				<a class="dropdown-item" href="{{ url_for('small_to_large_favourites') }}">Small To Large</a>
 				<a class="dropdown-item" href="{{ url_for('large_to_small_favourites') }}">Large To Small</a>
 			</div>
 		</div>
-	</div>
-	<div id="empty_message" class="row">
+	   </div>
+    {% endif %}
+	   <div id="empty_message" class="row">
 		<div class="col-12">
 			<div id="add_favourites_message">
 				<p>this list is currently empty.</p>
 			</div>
 		</div>
-	</div>
+	   </div>
 	<div class="row">
 		{% for favourite_exoplanet in favourite_exoplanets %}
 		<div class="col-12 col-md-6 col-lg-4">
