--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -6,8 +6,8 @@
 			<h1 class="top-titles">favourites list</h1>
 		</div>
 	</div>
-    {% if rocky %}
-        <div class="row main-action">
+	{% if rocky %}
+	<div class="row main-action">
 		<div class="col-6 main_action_buttons">
 			<a
 				href="{{ url_for('favourite_list') }}"><button class="top_buttons favourites_main_buttons buttons">favourites</button></a>
@@ -17,9 +17,9 @@
 				<button class="top_buttons favourites_main_buttons buttons">gas giants</button>
 			</a>
 		</div>
-	    </div>
-    {% elif gas %}
-        <div class="row main-action">
+	</div>
+	{% elif gas %}
+	<div class="row main-action">
 		<div class="col-6 main_action_buttons">
 			<a
 				href="{{ url_for('favourite_list') }}"><button class="top_buttons favourites_main_buttons buttons">favourites</button></a>
@@ -29,9 +29,9 @@
 				<button class="top_buttons favourites_main_buttons buttons">rocky</button>
 			</a>
 		</div>
-	    </div>
-    {% else %}
-       <div class="row main-action">
+	</div>
+	{% else %}
+	<div class="row main-action">
 		<div class="col-3 main_action_buttons">
 			<a href="{{ url_for('favourite_rocky_planets') }}">
 				<button class="buttons top_buttons">rocky</button>
@@ -56,15 +56,15 @@
 				<a class="dropdown-item" href="{{ url_for('large_to_small_favourites') }}">Large To Small</a>
 			</div>
 		</div>
-	   </div>
-    {% endif %}
-	   <div id="empty_message" class="row">
+	</div>
+	{% endif %}
+	<div id="empty_message" class="row">
 		<div class="col-12">
 			<div id="add_favourites_message">
 				<p>this list is currently empty.</p>
 			</div>
 		</div>
-	   </div>
+	</div>
 	<div class="row">
 		{% for favourite_exoplanet in favourite_exoplanets %}
 		<div class="col-12 col-md-6 col-lg-4">
@@ -82,8 +82,16 @@
 					</p>
 					<hr class="separator">
 					<div class="centered_buttons">
-						<a
+                        {% if rocky %}
+                          <a
+							href="{{ url_for('delete_rocky', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
+                        {% elif gas %}
+                          <a
+							href="{{ url_for('delete_gas_giant', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
+                        {% else %}
+						  <a
 							href="{{ url_for('delete_favourite', exoplanet_id=favourite_exoplanet._id)}}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Delete</button></a>
+                        {% endif %}
 						<a
 							href="{{ url_for('favourite_detailed', exoplanet_id=favourite_exoplanet._id) }}"><button class="favourites_display_buttons exoplanets_display_buttons buttons">Details</button></a>
 						<a
