Gave id of 'properties-section' to main the properties section

--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -13,7 +13,7 @@
 				</div>
 			</div>
 		</div>
-		<div style="margin-top:1.5rem" class="row">
+		<div id="properties-section" class="row">
 			<div class="col-12 properties_container">
 				<div id="detailed_properties" class="detailed">
 					<p id="name_paragraph">Name: {{ detailed_exoplanet.planet_name }}</p>
