--- a/templates/add_favourites.html
+++ b/templates/add_favourites.html
@@ -79,8 +79,8 @@
 		{% for favourite_exoplanet in favourite_exoplanets %}
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="exoplanets_holder">
-				<div class="image_holder">
-					<img class="zoom_image" src="{{favourite_exoplanet.exoplanet_image}}" width="100%" height="100%" alt="">
+				<div class="image_zoom">
+					<div class="image_holder {{favourite_exoplanet.exoplanet_image}}"></div>
                 </div>
 					<p id="exoplanet_name" class="exoplanet_properties">
 						<strong>{{favourite_exoplanet.planet_name}}</strong>
