--- a/templates/detailed_exoplanet.html
+++ b/templates/detailed_exoplanet.html
@@ -8,36 +8,35 @@
 	</div>
 	<div id="exoplanet_display" class="row">
 		<div class="col-12">
-			<div class="detailed">
-				<img src="{{ detailed_exoplanet.exoplanet_image }}" width="100%" height="100%" alt="">
-				</div>
+			<div class="detailed {{ detailed_exoplanet.exoplanet_image }}">
 			</div>
 		</div>
-		<div id="properties-section" class="row">
-			<div class="col-12 properties_container">
-				<div id="detailed_properties" class="detailed">
-					<p id="name_paragraph">Name: {{ detailed_exoplanet.planet_name }}</p>
-                    <hr style="margin-top:0" class="detailed_separator">
-					<p>Discovery date: {{ detailed_exoplanet.discovery_date }}</p>
-					<hr class="detailed_separator">
-					<p>Distance From Earth: {{ detailed_exoplanet.distance_from_earth }} light years</p>
-					<hr class="detailed_separator">
-					<p>Type: {{ detailed_exoplanet.type }}</p>
-					<hr class="detailed_separator">
-					<p>Star System: {{ detailed_exoplanet.star_system }}</p>
-					<hr class="detailed_separator">
-					<p>Mass: {{ detailed_exoplanet.mass }} Earth mass</p>
-					<hr class="detailed_separator">
-					<div id="detailed_buttons">
-						<a style="margin-right:2rem;"
-							href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
-							id="margin-left"><button class="buttons">add favourites</button></a>
-						<a style="margin-right:2rem;"
-							href="{{ url_for('calculate_weight', exoplanet_id=detailed_exoplanet._id) }}"
-							id="margin-left"><button class="buttons">calculate weight</button></a>
-					</div>
+	</div>
+	<div style="margin-top:1.5rem" class="row">
+		<div class="col-12 properties_container">
+			<div id="detailed_properties" class="detailed">
+				<p style="padding-top:2rem;">Name: {{ detailed_exoplanet.planet_name }}</p>
+				<hr class="detailed_separator">
+				<p>Discovery date: {{ detailed_exoplanet.discovery_date }}</p>
+				<hr class="detailed_separator">
+				<p>Distance From Earth: {{ detailed_exoplanet.distance_from_earth }} light years</p>
+				<hr class="detailed_separator">
+				<p>Type: {{ detailed_exoplanet.type }}</p>
+				<hr class="detailed_separator">
+				<p>Star System: {{ detailed_exoplanet.star_system }}</p>
+				<hr class="detailed_separator">
+				<p>Mass: {{ detailed_exoplanet.mass }} Earth mass</p>
+				<hr class="detailed_separator">
+				<div style="padding-bottom:1.5rem">
+					<a style="margin-right:2rem;"
+						href="{{ url_for('add_favourites', exoplanet_id=detailed_exoplanet._id)}}"
+						id="margin-left"><button class="buttons">add favourites</button></a>
+					<a style="margin-right:2rem;"
+						href="{{ url_for('calculate_weight', exoplanet_id=detailed_exoplanet._id) }}"
+						id="margin-left"><button class="buttons">calculate weight</button></a>
 				</div>
 			</div>
 		</div>
 	</div>
-	{% endblock %}
+</div>
+{% endblock %}
