--- a/static/css/style.css
+++ b/static/css/style.css
@@ -202,6 +202,8 @@ body {
     transition-timing-function: ease-in-out;
 }
 
+/* exoplanets' images */
+
 .Pegasi_51b {
     background-image: url(../images/exoplanet_images/Pegasi_51b.jpg);
 }
@@ -249,6 +251,16 @@ body {
 .Kepler-10b {
     background-image: url(../images/exoplanet_images/Kepler-10b.jpg);
 }
+
+.Default-rocky {
+    background-image: url(../images/exoplanet_images/Default-rocky.jpg);
+}
+
+.Default-gas {
+    background-image: url(../images/exoplanet_images/Default-gas.jpg);
+}
+
+/* end of exolanets' images */
 
 .image_holder:hover {
     transform: scale(1.2);
@@ -449,8 +461,11 @@ body {
 }
 
 .detailed {
-    width: 80%;
-    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: 75%;
+    height: 60vh;
     margin: 0 auto;
     border: 1px solid #1d1e1f;
 }
